--- a/aboutus.html
+++ b/aboutus.html
@@ -38,11 +38,10 @@
 
     <!-- navbar -->
 
-
     <nav class="responsivenav">
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
-            <a href="home.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+            <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
                     src="img/light full logo.png" alt=""></a>
 
             <div class="menu">
@@ -52,11 +51,11 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="/home.html" class="nava">Home</a></li>
+                    <li><a href="/index.html" class="nava">Home</a></li>
                     <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
                     <li>
                     </li>
-                    <li><a href="/coffeeshop.html" class="nava">Shop</a></li>
+                    <li><a href="/coffee.html" class="nava">Shop</a></li>
                     <!-- <li><a href="" class="nava">Menu</a></li> -->
                     <li><a href="/contactus.html" class="nava">Contactus</a></li>
                     <li><a href="/registrationform.html" class="nava">Form</a></li>
@@ -286,7 +285,7 @@
                         US</b></a><br><br>
                 <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
                         DETAILS</b></a><br><br>
-                <a href="/coffeeshop.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
                 <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
             <div class="col-sm-2"><br><br>
