--- a/contactus.html
+++ b/contactus.html
@@ -37,11 +37,10 @@
 <body>
       <!-- navbar -->
 
-
       <nav class="responsivenav">
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
-            <a href="home.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+            <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
                     src="img/light full logo.png" alt=""></a>
 
             <div class="menu">
@@ -51,11 +50,11 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="/home.html" class="nava">Home</a></li>
+                    <li><a href="/index.html" class="nava">Home</a></li>
                     <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
                     <li>
                     </li>
-                    <li><a href="/coffeeshop.html" class="nava">Shop</a></li>
+                    <li><a href="/coffee.html" class="nava">Shop</a></li>
                     <!-- <li><a href="" class="nava">Menu</a></li> -->
                     <li><a href="/contactus.html" class="nava">Contactus</a></li>
                     <li><a href="/registrationform.html" class="nava">Form</a></li>
@@ -164,7 +163,7 @@
     <div class="container">
         <div class="container" style="margin-top: 50px; border-radius: 40px; margin: 0px; background-color: #4b2d16;">
             <div class="row" style="margin-top: 0px; padding: 0px;">
-                <form class="needs-validation col-12 col-md-8" onsubmit="user()" action="home.html" method="get" novalidate style="color:#f3e8e8; padding: 60px;">
+                <form class="needs-validation col-12 col-md-8" onsubmit="user()" action="home.html" method="get" style="color:#f3e8e8; padding: 60px;">
                     <div class="form-row row">
                         <div class="col-12  col-md-6 ">
                             <label for="validationCustom01">First name</label>
@@ -228,7 +227,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <button  class="btn col-12 col-md-3" style="background-color:#21120A; color:#f3e8e8; z-index: 3; margin-top: 20px; margin-left: 12px; " type="submit"><b>Submit form</b></button>
+                            <button  class="btn col-12 col-md-3" style="background-color:#21120A; color:#f3e8e8; z-index: 3; margin-top: 20px; margin-left: 12px; " onsubmit="alert('Your query is sent wait for response, We will be back to you soon');" type="submit"><b>Submit form</b></button>
                         </div>
     
                           
@@ -303,7 +302,7 @@
                         US</b></a><br><br>
                 <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
                         DETAILS</b></a><br><br>
-                <a href="/coffeeshop.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
                 <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
             <div class="col-sm-2"><br><br>
