--- a/drink.html
+++ b/drink.html
@@ -231,162 +231,127 @@
 <body style="background-color:#f3e8e8;">
     <!-- navbar -->
 
-
     <nav class="responsivenav">
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen'></i>
-            <a href="home.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
-                    src="img/light full logo.png" alt=""></a>
+      <div class="nav-bar">
+          <i class='bx bx-menu sidebarOpen'></i>
+          <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+                  src="img/light full logo.png" alt=""></a>
 
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
+          <div class="menu">
+              <div class="logo-toggle">
+                  <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
+                  <i class='bx bx-x siderbarClose'></i>
+              </div>
 
-                <ul class="nav-links">
-                    <li><a href="/home.html" class="nava">Home</a></li>
-                    <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
-                    <li>
-                    </li>
-                    <li><a href="/coffeeshop.html" class="nava">Shop</a></li>
-                    <!-- <li><a href="" class="nava">Menu</a></li> -->
-                    <li><a href="/contactus.html" class="nava">Contactus</a></li>
-                    <li><a href="/registrationform.html" class="nava">Form</a></li>
-                </ul>
-            </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                </div>
-            </div>
-        </div>
-    </nav>
+              <ul class="nav-links">
+                  <li><a href="/index.html" class="nava">Home</a></li>
+                  <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
+                  <li>
+                  </li>
+                  <li><a href="/coffee.html" class="nava">Shop</a></li>
+                  <!-- <li><a href="" class="nava">Menu</a></li> -->
+                  <li><a href="/contactus.html" class="nava">Contactus</a></li>
+                  <li><a href="/registrationform.html" class="nava">Form</a></li>
+              </ul>
+          </div>
+          <div class="darkLight-searchBox">
+              <div class="dark-light">
+              </div>
+          </div>
+      </div>
+  </nav>
     </div>
 
 <!-- gallery cards --><br><br><br> <div class="container-fluid" style="background-color: #4b2d16; padding: 30px;  margin-top:80px ;">
             <h1 style="color: #f3e8e8; justify-content: center; text-align: center;"><b><img style="height: 70px; text-indent: 10px;padding-left: 25px;"
-                src="img/light full logo.png" alt="">COFFEE ITEMS</b></h1>
-        </div><br><br><br><br>
+                src="img/light full logo.png" alt="">JUICE ITEMS</b></h1>
+        </div><div style="color: #4b2d16" class="text-center p-4 ms-5 me-5"><p class="ps-5 pe-5">
+          Our drinks bring you freshness. We dare you to check out our best drinks to make your life fresh</p></div>
 <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio">
     <div class="container">
 
-      <!-- <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".cake">Cakes</li>
-            <li data-filter=".coffee">Coffee</li>
-            <li data-filter=".juice">Juices</li>
-          </ul>
-        </div>
-      </div> -->
-
+      
       <div class="row portfolio-container">
 
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Doppio coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Lemonade Slushie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Doppio Coffee</h4>
+              <h4>Lemonade Slushie</h4>
             </div>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe Americano coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Caffe Americano Coffee</h4>
-              </div>
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Tropical Peaflower Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tropical Peaflower Margarita</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe latte coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Caffe Latte Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Mojito Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Mojito Margarita</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Cappucino coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Cappucino Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Blue Lagoon Mocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Blue Lagoon Mocktail</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Caffe Mocha Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Strawberry Daiquiri.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Strawberry Daiquiri</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Mocha dalgona coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Mocha Dalgona Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Cocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Cocktail</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Iced mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Iced Mocha Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Smoothie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Smoothie</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/cold coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Cold Coffee</h4>
-              </div>
+        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="portfolio-wrap">
+            <img src="img(shop)/Dulce De Leche Milkshake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Dulce De Leche Milkshake</h4>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Black coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Black Coffee</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/Espresso coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Espresso Coffee</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
-            <div class="portfolio-wrap">
-              <img src="img(shop)/hot coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Hot Coffee</h4>
-              </div>
-            </div>
-          </div>
+        
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href=""><button class="btn me-md-2" type="button" style="background-color: #21120a;color: white;">Cakes</button></a>
-            <a href=""><button class="btn" type="button" style="background-color: #21120a;color: white;">Juices</button></a>
+            <a href="cake.html"><button class="btn me-md-2" type="button" style="background-color: #21120a;color: white;">Cakes</button></a>
+            <a href="coffee.html"><button class="btn" type="button" style="background-color: #21120a;color: white;">Coffee</button></a>
           </div>
 
       </div>
