--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <nav class="responsivenav">
             <div class="nav-bar">
                 <i class='bx bx-menu sidebarOpen'></i>
-                <a href="home.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+                <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
                         src="img/light full logo.png" alt=""></a>
 
                 <div class="menu">
@@ -80,11 +80,11 @@
                     </div>
 
                     <ul class="nav-links">
-                        <li><a href="/home.html" class="nava">Home</a></li>
+                        <li><a href="/index.html" class="nava">Home</a></li>
                         <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
                         <li>
                         </li>
-                        <li><a href="/coffeeshop.html" class="nava">Shop</a></li>
+                        <li><a href="/coffee.html" class="nava">Shop</a></li>
                         <!-- <li><a href="" class="nava">Menu</a></li> -->
                         <li><a href="/contactus.html" class="nava">Contactus</a></li>
                         <li><a href="/registrationform.html" class="nava">Form</a></li>
@@ -242,7 +242,7 @@
             <br>
             <div class="row w-100" style=" margin: 0%;">
                 <div class="col-12 col-lg-4">
-                    <a href="/coffeeshop.html" style="text-decoration: none;">
+                    <a href="/coffee.html" style="text-decoration: none;">
                         <div class="card catcard">
                             <img src="img/IMG-20230528-WA0009.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class=" col-12 col-lg-4">
-                <a href="/coffeeshop.html" style="text-decoration: none;">
+                <a href="/drink.html" style="text-decoration: none;">
                     <div class="card catcard">
                         <img src="img/New Year's Eve Rum Berry Cocktail.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-4">
-            <a href="/coffeeshop.html" style="text-decoration: none;">
+            <a href="/cake.html" style="text-decoration: none;">
                 <div class="card catcard">
                     <img src="img/Strawberry Cupcakes.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -548,7 +548,7 @@
                             US</b></a><br><br>
                     <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
                             DETAILS</b></a><br><br>
-                    <a href="/coffeeshop.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                    <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
                     <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
                 </div>
                 <div class="col-sm-2"><br><br>
