--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </li>
                         <li><a href="/coffee.html" class="nava">Shop</a></li>
                         <!-- <li><a href="" class="nava">Menu</a></li> -->
-                        <li><a href="Coffee-Time/contactus.html" class="nava">Contactus1</a></li>
+                        <li><a href="/contactus.html" class="nava">Contactus2</a></li>
                         <li><a href="/registrationform.html" class="nava">Form</a></li>
                     </ul>
                 </div>
