--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,7 @@
     <nav class="responsivenav">
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
-            <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+            <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
                     src="img/light full logo.png" alt=""></a>
 
             <div class="menu">
@@ -51,14 +51,14 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="/index.html" class="nava">Home</a></li>
-                    <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
+                    <li><a href="https://mahnoor643.github.io/Coffee-Time/index.html" class="nava">Home</a></li>
+                    <li><a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="nava">Aboutus</a></li>
                     <li>
                     </li>
-                    <li><a href="/coffee.html" class="nava">Shop</a></li>
+                    <li><a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="nava">Shop</a></li>
                     <!-- <li><a href="" class="nava">Menu</a></li> -->
-                    <li><a href="/contactus.html" class="nava">Contactus</a></li>
-                    <li><a href="/registrationform.html" class="nava">Form</a></li>
+                    <li><a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="nava">Contactus</a></li>
+                    <li><a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="nava">Form</a></li>
                 </ul>
             </div>
             <div class="darkLight-searchBox">
@@ -244,7 +244,7 @@
         <div
             style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
             <h5><b>Get your First munch</b></h5>
-            <a href="registrationform.html"> <button class="sign-in">Sign In</button></a>
+            <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html"> <button class="sign-in">Sign In</button></a>
             <p>New comers? Register here for ordering</p>
         </div>
 
@@ -281,12 +281,12 @@
 
             <div class="col-sm-3"><br><br>
                 <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
-                <a href="/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
+                <a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
                         US</b></a><br><br>
-                <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
+                <a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
                         DETAILS</b></a><br><br>
-                <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
-                <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
+                <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
             <div class="col-sm-2"><br><br>
                 <h5 style="color: white;"><b>LIKE US</b></h5><br>
