--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-3 col-md-2">
 
-                <a href="/registrationform.html" style="text-decoration: none; color: #4b2d16;">
+                <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" style="text-decoration: none; color: #4b2d16;">
                     <h6 class="latestnews  foradjustingrow"><b> <i class="bi bi-person-fill"></i> Customer's Login</b>
                     </h6>
                 </a>
@@ -64,38 +64,37 @@
 
 
 
-        <!-- navbar -->
+ <!-- navbar -->
 
+ <nav class="responsivenav">
+    <div class="nav-bar">
+        <i class='bx bx-menu sidebarOpen'></i>
+        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+                src="img/light full logo.png" alt=""></a>
 
-        <nav class="responsivenav">
-            <div class="nav-bar">
-                <i class='bx bx-menu sidebarOpen'></i>
-                <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
-                        src="img/light full logo.png" alt=""></a>
-
-                <div class="menu">
-                    <div class="logo-toggle">
-                        <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
-                        <i class='bx bx-x siderbarClose'></i>
-                    </div>
-
-                    <ul class="nav-links">
-                        <li><a href="/index.html" class="nava">Home</a></li>
-                        <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
-                        <li>
-                        </li>
-                        <li><a href="/coffee.html" class="nava">Shop</a></li>
-                        <!-- <li><a href="" class="nava">Menu</a></li> -->
-                        <li><a href="/contactus.html" class="nava">Contactus</a></li>
-                        <li><a href="/registrationform.html" class="nava">Form</a></li>
-                    </ul>
-                </div>
-                <div class="darkLight-searchBox">
-                    <div class="dark-light">
-                    </div>
-                </div>
+        <div class="menu">
+            <div class="logo-toggle">
+                <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
+                <i class='bx bx-x siderbarClose'></i>
             </div>
-        </nav>
+
+            <ul class="nav-links">
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/index.html" class="nava">Home</a></li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="nava">Aboutus</a></li>
+                <li>
+                </li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="nava">Shop</a></li>
+                <!-- <li><a href="" class="nava">Menu</a></li> -->
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="nava">Contactus</a></li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="nava">Form</a></li>
+            </ul>
+        </div>
+        <div class="darkLight-searchBox">
+            <div class="dark-light">
+            </div>
+        </div>
+    </div>
+</nav>
     </div>
 
 
@@ -193,7 +192,7 @@
                         consumer-driven site, and we strive to remain unbiased in our ratings and editorial
                         content.</i></b></p><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;
-            <a href="aboutus.html"><button
+            <a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html"><button
                     style="background-color: #d5c3c0; color: #000000; z-index: 3; border: #c5c6c7 solid; padding: 5px; border-radius: 5px;">Explore
                     Us</button></a>
         </div>
@@ -242,7 +241,7 @@
             <br>
             <div class="row w-100" style=" margin: 0%;">
                 <div class="col-12 col-lg-4">
-                    <a href="/coffee.html" style="text-decoration: none;">
+                    <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" style="text-decoration: none;">
                         <div class="card catcard">
                             <img src="img/IMG-20230528-WA0009.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -252,7 +251,7 @@
                 </div>
             </div>
             <div class=" col-12 col-lg-4">
-                <a href="/drink.html" style="text-decoration: none;">
+                <a href="https://mahnoor643.github.io/Coffee-Time/drink.html" style="text-decoration: none;">
                     <div class="card catcard">
                         <img src="img/New Year's Eve Rum Berry Cocktail.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -262,7 +261,7 @@
             </div>
         </div>
         <div class="col-12 col-lg-4">
-            <a href="/cake.html" style="text-decoration: none;">
+            <a href="https://mahnoor643.github.io/Coffee-Time/cake.html" style="text-decoration: none;">
                 <div class="card catcard">
                     <img src="img/Strawberry Cupcakes.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -499,82 +498,79 @@
         </div>
     </div>
 
-    <!-- footer -->
+  <!-- footer -->
 
-    <footer style="background-color: #f3e8e8;">
-        <div class="w-100"><br>
+  <footer style="background-color: #f3e8e8;">
+    <div class="w-100"><br>
 
-            <div
-                style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
-                <h5><b>Get your First munch</b></h5>
-                <a href="registrationform.html"> <button class="sign-in">Sign In</button></a>
-                <p>New comers? Register here for ordering</p>
+        <div
+            style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
+            <h5><b>Get your First munch</b></h5>
+            <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html"> <button class="sign-in">Sign In</button></a>
+            <p>New comers? Register here for ordering</p>
+        </div>
+
+
+        <div class="footerimg row w-100" style="color: #c5c6c7; padding: 20px; margin: 0%;">
+            <div class="col-sm-4">
+                <img src="img/light full logo.png" class="img-fluid" style="width: 120px;"><br><br>
+                <p>Coffee Time, Franchise Support Office, Suite #159, 5th Floor, Progressive Center,
+                    PECHS Block 6, Main Shahrah-e-Faisal, Karachi, Pakistan. POBOX 98400</p>
+
+                <div class="foricon">
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-youtube"></i></a>
+                </div>
+
+
+            </div>
+            <div class="col-sm-3"><br><br>
+                <h5 style="color: white;"><b>CONTACT US</b></h5><br>
+                <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
+                            class="bi bi-telephone"></i> &nbsp;&nbsp;+92 21 65849552</b></a>
+                <br><br>
+                <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
+                            class="bi bi-geo-alt-fill"></i> &nbsp;&nbsp;SD-1, Block A North Nazimabad Town, Karachi,
+                        Karachi City, Sindh 74700, Pakistan
+                    </b></a><br><br>
+                <a href="mailto:excellentcoaching49@gmail.com" class=" footercontactus"
+                    style="text-decoration: none;"><b><i class="bi bi-envelope-fill"></i>
+                        &nbsp;&nbsp;coffeetime49@gmail.com</b></a>
             </div>
 
 
-            <div class="footerimg row w-100" style="color: #c5c6c7; padding: 20px; margin: 0%;">
-                <div class="col-sm-4">
-                    <img src="img/light full logo.png" class="img-fluid" style="width: 120px;"><br><br>
-                    <p>Coffee Time, Franchise Support Office, Suite #159, 5th Floor, Progressive Center,
-                        PECHS Block 6, Main Shahrah-e-Faisal, Karachi, Pakistan. POBOX 98400</p>
-
-                    <div class="foricon">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-twitter"></i></a>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-youtube"></i></a>
-                    </div>
-
-
-                </div>
-                <div class="col-sm-3"><br><br>
-                    <h5 style="color: white;"><b>CONTACT US</b></h5><br>
-                    <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
-                                class="bi bi-telephone"></i> &nbsp;&nbsp;+92 21 65849552</b></a>
-                    <br><br>
-                    <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
-                                class="bi bi-geo-alt-fill"></i> &nbsp;&nbsp;SD-1, Block A North Nazimabad Town, Karachi,
-                            Karachi City, Sindh 74700, Pakistan
-                        </b></a><br><br>
-                    <a href="mailto:excellentcoaching49@gmail.com" class=" footercontactus"
-                        style="text-decoration: none;"><b><i class="bi bi-envelope-fill"></i>
-                            &nbsp;&nbsp;coffeetime49@gmail.com</b></a>
-                </div>
-
-
-                <div class="col-sm-3"><br><br>
-                    <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
-                    <a href="/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
-                            US</b></a><br><br>
-                    <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
-                            DETAILS</b></a><br><br>
-                    <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
-                    <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
-                </div>
-                <div class="col-sm-2"><br><br>
-                    <h5 style="color: white;"><b>LIKE US</b></h5><br>
-                    <div class="fb-like" data-href="https://www.facebook.com/ELC.009" data-width=""
-                        data-layout="box_count" data-action="like" data-size="small" data-share="true"></div>
-
-                </div>
+            <div class="col-sm-3"><br><br>
+                <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
+                        US</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
+                        DETAILS</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
-
-
-            <div class="row w-100" style="background-color: #21120a; height: 80px; margin: 0%;">
-
-                <div class="col-12 col-md-6" style="padding: 18px;">
-                    <img src="img/light half logo.png" height="50px">
-                </div>
-                <div class=" col-12 col-md-6" style="padding: 25px; color:grey;">
-                    <p>Copyright © 2023,Coffee Time,All rights reserved</p>
-                </div>
+            <div class="col-sm-2"><br><br>
+                <h5 style="color: white;"><b>LIKE US</b></h5><br>
+                <div class="fb-like" data-href="https://www.facebook.com/ELC.009" data-width=""
+                    data-layout="box_count" data-action="like" data-size="small" data-share="true"></div>
 
             </div>
         </div>
-    </footer>
 
 
+        <div class="row w-100" style="background-color: #21120a; height: 80px; margin: 0%;">
 
+            <div class="col-12 col-md-6" style="padding: 18px;">
+                <img src="img/light half logo.png" height="50px">
+            </div>
+            <div class=" col-12 col-md-6" style="padding: 25px; color:grey;">
+                <p>Copyright © 2023,Coffee Time,All rights reserved</p>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
 
 
