--- a/contactus.html
+++ b/contactus.html
@@ -35,37 +35,37 @@
 
 
 <body>
-      <!-- navbar -->
+ <!-- navbar -->
 
-      <nav class="responsivenav">
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen'></i>
-            <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
-                    src="img/light full logo.png" alt=""></a>
+ <nav class="responsivenav">
+    <div class="nav-bar">
+        <i class='bx bx-menu sidebarOpen'></i>
+        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+                src="img/light full logo.png" alt=""></a>
 
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
-
-                <ul class="nav-links">
-                    <li><a href="/index.html" class="nava">Home</a></li>
-                    <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
-                    <li>
-                    </li>
-                    <li><a href="/coffee.html" class="nava">Shop</a></li>
-                    <!-- <li><a href="" class="nava">Menu</a></li> -->
-                    <li><a href="/contactus.html" class="nava">Contactus</a></li>
-                    <li><a href="/registrationform.html" class="nava">Form</a></li>
-                </ul>
+        <div class="menu">
+            <div class="logo-toggle">
+                <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
+                <i class='bx bx-x siderbarClose'></i>
             </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                </div>
+
+            <ul class="nav-links">
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/index.html" class="nava">Home</a></li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="nava">Aboutus</a></li>
+                <li>
+                </li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="nava">Shop</a></li>
+                <!-- <li><a href="" class="nava">Menu</a></li> -->
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="nava">Contactus</a></li>
+                <li><a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="nava">Form</a></li>
+            </ul>
+        </div>
+        <div class="darkLight-searchBox">
+            <div class="dark-light">
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
 </div>
 
 
@@ -163,7 +163,7 @@
     <div class="container">
         <div class="container" style="margin-top: 50px; border-radius: 40px; margin: 0px; background-color: #4b2d16;">
             <div class="row" style="margin-top: 0px; padding: 0px;">
-                <form class="needs-validation col-12 col-md-8" onsubmit="user()" action="home.html" method="get" style="color:#f3e8e8; padding: 60px;">
+                <form class="needs-validation col-12 col-md-8" onsubmit="user()" action="https://mahnoor643.github.io/Coffee-Time/home.html" method="get" style="color:#f3e8e8; padding: 60px;">
                     <div class="form-row row">
                         <div class="col-12  col-md-6 ">
                             <label for="validationCustom01">First name</label>
@@ -253,15 +253,15 @@
     </div>
     
     <br><br>
-   <!-- footer -->
+  <!-- footer -->
 
-   <footer style="background-color: #f3e8e8;">
+  <footer style="background-color: #f3e8e8;">
     <div class="w-100"><br>
 
         <div
             style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
             <h5><b>Get your First munch</b></h5>
-            <a href="registrationform.html"> <button class="sign-in">Sign In</button></a>
+            <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html"> <button class="sign-in">Sign In</button></a>
             <p>New comers? Register here for ordering</p>
         </div>
 
@@ -298,12 +298,12 @@
 
             <div class="col-sm-3"><br><br>
                 <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
-                <a href="/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
+                <a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
                         US</b></a><br><br>
-                <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
+                <a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
                         DETAILS</b></a><br><br>
-                <a href="/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
-                <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
+                <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
             <div class="col-sm-2"><br><br>
                 <h5 style="color: white;"><b>LIKE US</b></h5><br>
@@ -326,7 +326,6 @@
         </div>
     </div>
 </footer>
-
 
 
 
