--- a/drink.html
+++ b/drink.html
@@ -229,37 +229,37 @@
 
 
 <body style="background-color:#f3e8e8;">
-    <!-- navbar -->
+ <!-- navbar -->
 
-    <nav class="responsivenav">
-      <div class="nav-bar">
-          <i class='bx bx-menu sidebarOpen'></i>
-          <a href="index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
-                  src="img/light full logo.png" alt=""></a>
+ <nav class="responsivenav">
+  <div class="nav-bar">
+      <i class='bx bx-menu sidebarOpen'></i>
+      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+              src="img/light full logo.png" alt=""></a>
 
-          <div class="menu">
-              <div class="logo-toggle">
-                  <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
-                  <i class='bx bx-x siderbarClose'></i>
-              </div>
-
-              <ul class="nav-links">
-                  <li><a href="/index.html" class="nava">Home</a></li>
-                  <li><a href="/aboutus.html" class="nava">Aboutus</a></li>
-                  <li>
-                  </li>
-                  <li><a href="/coffee.html" class="nava">Shop</a></li>
-                  <!-- <li><a href="" class="nava">Menu</a></li> -->
-                  <li><a href="/contactus.html" class="nava">Contactus</a></li>
-                  <li><a href="/registrationform.html" class="nava">Form</a></li>
-              </ul>
+      <div class="menu">
+          <div class="logo-toggle">
+              <span class="logo"><a href="#"><b>Coffee Time</b></a></span>
+              <i class='bx bx-x siderbarClose'></i>
           </div>
-          <div class="darkLight-searchBox">
-              <div class="dark-light">
-              </div>
+
+          <ul class="nav-links">
+              <li><a href="https://mahnoor643.github.io/Coffee-Time/index.html" class="nava">Home</a></li>
+              <li><a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="nava">Aboutus</a></li>
+              <li>
+              </li>
+              <li><a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="nava">Shop</a></li>
+              <!-- <li><a href="" class="nava">Menu</a></li> -->
+              <li><a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="nava">Contactus</a></li>
+              <li><a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="nava">Form</a></li>
+          </ul>
+      </div>
+      <div class="darkLight-searchBox">
+          <div class="dark-light">
           </div>
       </div>
-  </nav>
+  </div>
+</nav>
     </div>
 
 <!-- gallery cards --><br><br><br> <div class="container-fluid" style="background-color: #4b2d16; padding: 30px;  margin-top:80px ;">
@@ -350,8 +350,8 @@
         
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href="cake.html"><button class="btn me-md-2" type="button" style="background-color: #21120a;color: white;">Cakes</button></a>
-            <a href="coffee.html"><button class="btn" type="button" style="background-color: #21120a;color: white;">Coffee</button></a>
+            <a href="https://mahnoor643.github.io/Coffee-Time/cake.html"><button class="btn me-md-2" type="button" style="background-color: #21120a;color: white;">Cakes</button></a>
+            <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html"><button class="btn" type="button" style="background-color: #21120a;color: white;">Coffee</button></a>
           </div>
 
       </div>
@@ -364,82 +364,79 @@
 
 
 
-    <!-- footer -->
+  <!-- footer -->
 
-    <footer style="background-color: #f3e8e8;">
-        <div class="w-100"><br>
+  <footer style="background-color: #f3e8e8;">
+    <div class="w-100"><br>
 
-            <div
-                style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
-                <h5><b>Get your First munch</b></h5>
-                <a href="registrationform.html"> <button class="sign-in">Sign In</button></a>
-                <p>New comers? Register here for ordering</p>
+        <div
+            style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
+            <h5><b>Get your First munch</b></h5>
+            <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html"> <button class="sign-in">Sign In</button></a>
+            <p>New comers? Register here for ordering</p>
+        </div>
+
+
+        <div class="footerimg row w-100" style="color: #c5c6c7; padding: 20px; margin: 0%;">
+            <div class="col-sm-4">
+                <img src="img/light full logo.png" class="img-fluid" style="width: 120px;"><br><br>
+                <p>Coffee Time, Franchise Support Office, Suite #159, 5th Floor, Progressive Center,
+                    PECHS Block 6, Main Shahrah-e-Faisal, Karachi, Pakistan. POBOX 98400</p>
+
+                <div class="foricon">
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-youtube"></i></a>
+                </div>
+
+
+            </div>
+            <div class="col-sm-3"><br><br>
+                <h5 style="color: white;"><b>CONTACT US</b></h5><br>
+                <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
+                            class="bi bi-telephone"></i> &nbsp;&nbsp;+92 21 65849552</b></a>
+                <br><br>
+                <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
+                            class="bi bi-geo-alt-fill"></i> &nbsp;&nbsp;SD-1, Block A North Nazimabad Town, Karachi,
+                        Karachi City, Sindh 74700, Pakistan
+                    </b></a><br><br>
+                <a href="mailto:excellentcoaching49@gmail.com" class=" footercontactus"
+                    style="text-decoration: none;"><b><i class="bi bi-envelope-fill"></i>
+                        &nbsp;&nbsp;coffeetime49@gmail.com</b></a>
             </div>
 
 
-            <div class="footerimg row w-100" style="color: #c5c6c7; padding: 20px; margin: 0%;">
-                <div class="col-sm-4">
-                    <img src="img/light full logo.png" class="img-fluid" style="width: 120px;"><br><br>
-                    <p>Coffee Time, Franchise Support Office, Suite #159, 5th Floor, Progressive Center,
-                        PECHS Block 6, Main Shahrah-e-Faisal, Karachi, Pakistan. POBOX 98400</p>
-
-                    <div class="foricon">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-twitter"></i></a>
-                        <a href="#"><i class="bi bi-instagram"></i></a>
-                        <a href="#"><i class="bi bi-youtube"></i></a>
-                    </div>
-
-
-                </div>
-                <div class="col-sm-3"><br><br>
-                    <h5 style="color: white;"><b>CONTACT US</b></h5><br>
-                    <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
-                                class="bi bi-telephone"></i> &nbsp;&nbsp;+92 21 65849552</b></a>
-                    <br><br>
-                    <a href="" class=" footercontactus" style="text-decoration: none;"><b><i
-                                class="bi bi-geo-alt-fill"></i> &nbsp;&nbsp;SD-1, Block A North Nazimabad Town, Karachi,
-                            Karachi City, Sindh 74700, Pakistan
-                        </b></a><br><br>
-                    <a href="mailto:excellentcoaching49@gmail.com" class=" footercontactus"
-                        style="text-decoration: none;"><b><i class="bi bi-envelope-fill"></i>
-                            &nbsp;&nbsp;coffeetime49@gmail.com</b></a>
-                </div>
-
-
-                <div class="col-sm-3"><br><br>
-                    <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
-                    <a href="/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
-                            US</b></a><br><br>
-                    <a href="/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
-                            DETAILS</b></a><br><br>
-                    <a href="/coffeeshop.html" class="footerlinks"
-                        style="text-decoration: none;"><b>SHOP</b></a><br><br>
-                    <a href="/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
-                </div>
-                <div class="col-sm-2"><br><br>
-                    <h5 style="color: white;"><b>LIKE US</b></h5><br>
-                    <div class="fb-like" data-href="https://www.facebook.com/ELC.009" data-width=""
-                        data-layout="box_count" data-action="like" data-size="small" data-share="true"></div>
-
-                </div>
+            <div class="col-sm-3"><br><br>
+                <h5 style="color: white;"><b>QUICK ACCESS</b></h5><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/aboutus.html" class="footerlinks" style="text-decoration: none;"><b>ABOUT
+                        US</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/contactus.html" class="footerlinks" style="text-decoration: none;"><b>CONTACT
+                        DETAILS</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/coffee.html" class="footerlinks" style="text-decoration: none;"><b>SHOP</b></a><br><br>
+                <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html" class="footerlinks" style="text-decoration: none;"><b>FORM</b></a>
             </div>
-
-
-            <div class="row w-100" style="background-color: #21120a; height: 80px; margin: 0%;">
-
-                <div class="col-12 col-md-6" style="padding: 18px;">
-                    <img src="img/light half logo.png" height="50px">
-                </div>
-                <div class=" col-12 col-md-6" style="padding: 25px; color:grey;">
-                    <p>Copyright © 2023,Coffee Time,All rights reserved</p>
-                </div>
+            <div class="col-sm-2"><br><br>
+                <h5 style="color: white;"><b>LIKE US</b></h5><br>
+                <div class="fb-like" data-href="https://www.facebook.com/ELC.009" data-width=""
+                    data-layout="box_count" data-action="like" data-size="small" data-share="true"></div>
 
             </div>
         </div>
-    </footer>
 
 
+        <div class="row w-100" style="background-color: #21120a; height: 80px; margin: 0%;">
+
+            <div class="col-12 col-md-6" style="padding: 18px;">
+                <img src="img/light half logo.png" height="50px">
+            </div>
+            <div class=" col-12 col-md-6" style="padding: 25px; color:grey;">
+                <p>Copyright © 2023,Coffee Time,All rights reserved</p>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
 
 
